<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/whitesmoke"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/company_logo"
        android:layout_width="163dp"
        android:layout_height="173dp"
        android:contentDescription="@string/logo_desc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.966"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.001"
        app:srcCompat="@drawable/idearoute_logo" />

    <TextView
        android:id="@+id/company_name"
        android:layout_width="204dp"
        android:layout_height="52dp"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:text="@string/company_name"
        android:textColor="@color/logo_blue"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.55"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.272" />

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/whitesmoke"
        app:cardCornerRadius="75dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.563"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.438">

        <ImageView
            android:id="@+id/profile_pic"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:background="@color/img_bg"
            android:contentDescription="@string/profile_desc"
            android:foregroundGravity="center"
            app:srcCompat="@drawable/profile1" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/prof_desc"
        android:layout_width="213dp"
        android:layout_height="33dp"
        android:gravity="center"
        android:text="@string/prof_name"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.575"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.616" />

    <TextView
        android:id="@+id/usn"
        android:layout_width="213dp"
        android:layout_height="44dp"
        android:fontFamily="sans-serif-medium"
        android:gravity="center|top"
        android:text="@string/prof_info"
        android:textColor="@color/grey_shade"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.575"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.687" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="284dp"
        android:layout_height="108dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/contact"
        android:textColor="@color/grey_shade"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.669"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.911" />

    <ImageView
        android:id="@+id/phone_icon"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:contentDescription="@string/phone_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.123"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.805"
        app:srcCompat="@drawable/phone_icon" />

    <ImageView
        android:id="@+id/mail_icon"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:contentDescription="@string/mail_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.122"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.842"
        app:srcCompat="@drawable/mail_icon" />

    <ImageView
        android:id="@+id/github_icon"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:contentDescription="@string/github_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.124"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.871"
        app:srcCompat="@drawable/github_icon" />


</androidx.constraintlayout.widget.ConstraintLayout>